--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>Rock, Paper, Scissors</title>
-        <script src="javascript.js"></script>
     </head>
 
     <body>
         <h1>Rock, Paper, Scissors!</h1>
+        <button id="ROCK">Rock!</button>
+        <button id="PAPER">Paper!</button>
+        <button id="SCISSORS">Scissors!</button>
+
+        <script src="javascript.js"></script>
     </body>
 </html>
+
